--- a/Makefile.comp
+++ b/Makefile.comp
@@ -3,21 +3,21 @@
 #
 CODE_DIR=../..
 include $(CODE_DIR)/build.conf
+
 DEFS = -DENABLE_INPLACE=ON -DEVEN=ON 
 ifneq ($(strip $(SINGLE_PRECISION)),1)
-override DEFS += -DDOUBLE_PRECISION=ON -cpp
+DEFS += -DDOUBLE_PRECISION=ON
 endif
-ifeq ($(strip $(FFLAGS_DEBUG)),1)
+ifeq ($(strip $(FCFLAGS_DEBUG)),1)
 BUILD=DEBUG
 endif
-ifeq ($(strip $(FFLAGS_DEBUG_MAX)),1)
+ifeq ($(strip $(FCFLAGS_DEBUG_MAX)),1)
 BUILD=DEBUG
 endif
 CMP=$(strip $(FCOMP))
 #=======================================================================
 # Makefile for 2DECOMP&FFT compilers
 #=======================================================================
-
 DEBUG_BUILD =
 ifeq ($(BUILD),DEBUG)
   DEBUG_BUILD = yes
@@ -29,49 +29,48 @@ FC = mpifort
 ifeq ($(CMP),INTEL)
   FC = mpiifort
 
-  FFLAGS += -fpp -std08
+  FCFLAGS += -fpp -std08
   ifeq ($(DEBUG_BUILD),yes)
     DEFS += -DDEBUG
-    FFLAGS += -g -O0 -debug extended -traceback
+    FCFLAGS += -g -O0 -debug extended -traceback
   else
-    FFLAGS += -O3 -mavx2 -march=core-avx2 -mtune=core-avx2
+    FCFLAGS += -O3 -mavx2 -march=core-avx2 -mtune=core-avx2
   endif
 
   ifeq ($(BUILD),dev)
     # Add additional, stricter flags
-    FFLAGS += -warn all,noexternal
+    FCFLAGS += -warn all,noexternal
   endif
 
   MODFLAG = -module # Explicit space
 else ifeq ($(CMP),INTEL_IFX)
   FC = mpiifx
-
-  FFLAGS += -fpp -std08
+  FCFLAGS += -fpp -std08
   ifeq ($(DEBUG_BUILD),yes)
     DEFS += -DDEBUG
-    FFLAGS += -g -O0 -debug extended -traceback
+    FCFLAGS += -g -O0 -debug extended -traceback
   else
-    FFLAGS += -O3 -mavx2 -march=core-avx2 -mtune=core-avx2
+    FCFLAGS += -O3 -mavx2 -march=core-avx2 -mtune=core-avx2
   endif
 
   ifeq ($(BUILD),dev)
     # Add additional, stricter flags
-    FFLAGS += -warn all,noexternal
+    FCFLAGS += -warn all,noexternal
   endif
 
   MODFLAG = -module # Explicit space
 else ifeq ($(CMP),GNU)
-  FC = mpif90
-  FFLAGS += -cpp -std=f2008
+  FC = mpifort
+  FCFLAGS += -cpp -std=f2008
   ifeq "$(shell expr `gfortran -dumpversion | cut -f1 -d.` \>= 10)" "1"
-    FFLAGS += -fallow-argument-mismatch
+    FCFLAGS += -fallow-argument-mismatch
   endif
   ifeq ($(DEBUG_BUILD),yes)
     DEFS += -DDEBUG
-    FFLAGS += -g3 -Og
-    FFLAGS += -ffpe-trap=invalid,zero -fcheck=all -fimplicit-none
+    FCFLAGS += -g3 -Og
+    FCFLAGS += -ffpe-trap=invalid,zero -fcheck=all -fimplicit-none
   else
-    FFLAGS += -O3 -march=native
+    FCFLAGS += -O3 -march=native
   endif
   ifeq ($(findstring openmpi,$(shell $(FC) -show | grep openmpi)),openmpi)
     MPI_FAMILY = openmpi
@@ -81,37 +80,37 @@ else ifeq ($(CMP),GNU)
 
   ifeq ($(BUILD),dev)
     # Add additional, stricter flags
-    FFLAGS += -Wall -Wpedantic
+    FCFLAGS += -Wall -Wpedantic
     ifneq ($(FFT),fftw3)
       # FFTW3 (legacy) doesn't have interfaces
       ifeq ($(MPI_FAMILY),openmpi)
         # MPICH doesn't export interfaces...
-        FFLAGS += -Wimplicit-procedure -Wimplicit-interface
+        FCFLAGS += -Wimplicit-procedure -Wimplicit-interface
       endif
     endif
-    FFLAGS += -Wno-unused-function
-    FFLAGS += -Werror
+    FCFLAGS += -Wno-unused-function
+    FCFLAGS += -Werror
   endif
 else ifeq ($(CMP),NAG)
   FC = mpinagfor
-  FFLAGS += -fpp
+  FCFLAGS += -fpp
 else ifeq ($(CMP),CRAY)
   FC = ftn
-  FFLAGS += -eF
+  FCFLAGS += -eF
   ifeq ($(DEBUG_BUILD),yes)
     DEFS += -DDEBUG
-    FFLAGS += -G2
-    FFLAGS += -en
+    FCFLAGS += -G2
+    FCFLAGS += -en
   else
-    FFLAGS += -g -O3
+    FCFLAGS += -g -O3
   endif
-  FFLAGS += -N1023 -M 296
+  FCFLAGS += -N1023 -M 296
 else ifeq ($(CMP),NVIDIA)
   FC = mpifort
   MODFLAG = -module # Explicit space
-  FFLAGS += -cpp
+  FCFLAGS += -cpp
   ifeq ($(PARAMOD),multicore)
-     FFLAGS += -O3 -Minfo=accel -stdpar -acc -target=multicore
+     FCFLAGS += -O3 -Minfo=accel -stdpar -acc -target=multicore
      LFLAGS += -acc -lnvhpcwrapnvtx
   else ifeq ($(PARAMOD),gpu)
      CCXY=80
@@ -121,27 +120,27 @@ else ifeq ($(CMP),NVIDIA)
      else
        GPUOPT=-gpu=cc${CCXY},lineinfo
      endif
-     FFLAGS += -D_GPU
+     FCFLAGS += -D_GPU
      NCCL=no     
      ifeq ($(NCCL),yes)
-       FFLAGS += -D_NCCL
+       FCFLAGS += -D_NCCL
      endif
-     FFLAGS += -Mfree -Kieee -Minfo=accel,stdpar ${GPUOPT} -acc -target=gpu -traceback -O3 -DUSE_CUDA -cuda 
+     FCFLAGS += -Mfree -Kieee -Minfo=accel,stdpar ${GPUOPT} -acc -target=gpu -traceback -O3 -DUSE_CUDA -cuda 
      ifeq ($(NCCL),yes)
-       FFLAGS += -cudalib=cufft,nccl
+       FCFLAGS += -cudalib=cufft,nccl
      else
-       FFLAGS += -cudalib=cufft
+       FCFLAGS += -cudalib=cufft
      endif
      LFLAGS += -acc -lnvhpcwrapnvtx
   else
     ifeq ($(DEBUG_BUILD),yes)
       DEFS += -DDEBUG
-      FFLAGS += -g -O0
-      FFLAGS += -traceback
-      FFLAGS += -Mbounds -Mchkptr
-      FFLAGS += -Ktrap=fp # Trap floating-point errors
+      FCFLAGS += -g -O0
+      FCFLAGS += -traceback
+      FCFLAGS += -Mbounds -Mchkptr
+      FCFLAGS += -Ktrap=fp # Trap floating-point errors
     else
-      FFLAGS += -O3 -fast -tp=native
+      FCFLAGS += -O3 -fast -tp=native
     endif
   endif
 endif
